--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.5"
+heron = { version = "0.12.1", features = ["2d"] }
 
 crossterm = "0.22"
 tui = { version = "0.16", default-features = false, features = ['crossterm'] }
