--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ ansi-to-tui = "0.4.1"
 
 tracing = "0.1.29"
 tracing-subscriber = { version = "0.3.2", features = ["env-filter", "std"] }
+
+thiserror = "1.0.30"
