--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
 
 heron = { path = "../heron", features = ["2d"] }
 
+bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs.git" }
+ggrs = "0.5.1"
+
+clap = "3.0.0-beta.5"
 
 crossterm = "0.22.1"
 tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
