--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "client"
+name = "common"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bevy = "0.5"
 
-crossterm = "0.22"
-tui = { version = "0.16", default-features = false, features = ['crossterm'] }
-ansi-to-tui = "0.4.1"
+heron = { version = "0.12.1", features = ["2d"] }
 
 tracing = "0.1.29"
 tracing-subscriber = { version = "0.3.2", features = ["env-filter", "std"] }
 
 thiserror = "1.0.30"
-
-common = { path = "../common" }
