--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -12,3 +12,7 @@ tracing = "0.1.29"
 tracing-subscriber = { version = "0.3.2", features = ["env-filter", "std"] }
 
 thiserror = "1.0.30"
+
+serde = { version = "1.0.131", features = ["derive"] }
+postcard = { version = "0.7.2", features = ["use-std"], default-features = false }
+laminar = "0.5.0"
