--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bevy = { version = "0.5.0", default-features = false }
+
+common = { path = "../common" }
