--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.5.0"
+bevy = { version = "0.5.0" } # TODO: Restrict features
 
 heron = { version = "0.12.1", features = ["2d"] }
 
