--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 bevy = "0.5.0"
 
+structopt = "0.3.25"
+
 crossterm = "0.22.1"
 tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
 ansi-to-tui = "0.4.1"
