--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ structopt = "0.3.25"
 crossterm = "0.22.1"
 tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
 ansi-to-tui = "0.4.1"
+bevy_mod_debugdump = "0.2.1"
 
 tracing = "0.1.29"
 tracing-subscriber = { version = "0.3.3", features = ["env-filter", "std"] }
