--- a/ladder/Cargo.toml
+++ b/ladder/Cargo.toml
@@ -9,6 +9,7 @@ tokio = { version = "1.15.0", features = ["macros"] }
 jsonwebtoken = "7.2.0"
 serde = { version = "1.0.132", features = ["derive"] }
 serde_json = "1.0.73"
+tower = "0.4.11"
 
 once_cell = "1.9.0"
 dotenv = "0.15.0"
