--- a/ladder/Cargo.toml
+++ b/ladder/Cargo.toml
@@ -18,3 +18,6 @@ sea-orm = { version = "0.4.2", features = ["sqlx-postgres", "runtime-tokio-nativ
 
 tracing = "0.1.29"
 tracing-subscriber = "0.3.4"
+
+[dev-dependencies]
+reqwest = { version = "0.11.8", features = ["json"] }
