Upgrade to bevy 0.6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = [
     "client",
     "server",
     "common",
-    "ladder",
-    "matchmaker"
+    # "ladder",
+    # "matchmaker"
 ]
+
+resolver = "2"
