--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.5.0"
+bevy = "0.6.0"
 
-heron = { version = "0.12.1", features = ["2d"] }
+heron = { version = "1.0.1-rc.1", features = ["2d"] }
 
 tracing = "0.1.29"
 
 thiserror = "1.0.30"
 
-serde = { version = "1.0.132", features = ["derive"] }
-postcard = { version = "0.7.2", features = ["use-std"], default-features = false }
-bevy_networking_turbulence = "0.3.3"
+serde = { version = "1.0.133", features = ["derive"] }
+postcard = { version = "0.7.3", features = ["use-std"], default-features = false }
+bevy_networking_turbulence = "0.4.0"
