--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -15,3 +15,5 @@ thiserror = "1.0.30"
 serde = { version = "1.0.133", features = ["derive"] }
 postcard = { version = "0.7.3", features = ["use-std"], default-features = false }
 bevy_networking_turbulence = "0.4.0"
+
+static_assertions = "1.1.0"
